# AetherBinary

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.cc  release.cc
cmake/: AetherBinaryConfig.cmake.in
cmake/llvm/: CMakeLists.txt  ld.txt
include/: AetherArch.h  AetherBinary.h  AetherCommop.h  AetherELF.h  AetherFile.h  AetherMachO.h  AetherMeta.h  AetherOther.h  AetherPE.h  AetherRegister.h  CommDef.h  Disassembler.h  Version.h.in
sample/: aether-asm.cc  aether-binary.cc  aether-comm.h  aether-disasm.cc  arm64-ios  arm64-macos  x86_64-android
sample/aether_binary_target/: Cargo.toml
sample/binary/: android-aarch64  android-armv7  android-x86  linux-x86_64  win-x86_64
script/: aebi.cc  comdef.h  cutter.h  cutter.h.cc
src/: AetherArch.cpp  AetherBinary.cpp  AetherBinaryPriv.hpp  AetherCommop.cpp  AetherELF.cpp  AetherMachO.cpp  AetherMeta.cpp  AetherOther.cpp  AetherPE.cpp  Assembler.cpp  Disassembler.cpp  MachOTrie.hpp
